# Comfyui-Padded-Rect-Mask

./: __init__.py  nodes.py  pyproject.toml
examples/: example-1.json
