#  Edit the following fields to match your project

[project]
name = "Comfyui-Padded-Rect-Mask"
description = "Generates rectangular mask from coordinates with optional padding."
version = "1.0.9"
license = {file = "LICENSE"}
dependencies = [""]

[project.urls]
Repository = "https://github.com/alexlawford/Comfyui-Padded-Rect-Mask"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alexlawford"
DisplayName = "Comfyui-Padded-Rect-Mask"
Icon = ""